# Exhale

./: .env.example  .gitignore  Caddyfile  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/examples/: demo_coverage.py  demo_pipeline.py  demo_retro_scan.py  demo_zero_knowledge.py
backend/src/exhale/: __init__.py  actions.py  ages.py  api.py  auth.py  auto_sync.py  autonomy.py  briefing.py  connections.py  coverage.py  coverage_config.py  credibility.py  crypto.py  extraction.py  extraction_llm.py  extraction_vision.py  forgetting_engine.py  graph.py  handled.py  helpers.py  intentions.py  memory.py  notify.py  oauth.py  persistence.py  ratelimit.py  retro_scan.py  routing.py  schemas.py  secure.py  seed.py  store.py  templates.py  waiting.py
backend/src/exhale/connectors/: __init__.py  base.py  gcal.py  gmail.py  ics.py  imap.py  memory.py  msgraph.py  preprocess.py
backend/src/exhale/sql/: schema.sql
backend/tests/: conftest.py  test_actions.py  test_ages.py  test_api.py  test_auth.py  test_auto_sync.py  test_autonomy.py  test_connections.py  test_connectors.py  test_coverage.py  test_credibility.py  test_crypto.py  test_extraction.py  test_extraction_llm.py  test_extraction_vision.py  test_forgetting_engine.py  test_gcal_connector.py  test_gmail_connector.py  test_graph.py  test_handled.py  test_helper_api.py  test_helpers.py  test_ics_connector.py  test_intentions.py  test_memory.py  test_msgraph_connector.py  test_multi_child.py  test_notify.py  test_oauth.py  test_on_duty_windows.py  test_persistence.py  test_preprocess.py  test_retro_scan.py  test_routing.py  test_schemas.py  test_secure.py  test_store.py  test_templates.py  test_together_windows.py  test_waiting.py  (+1 more)
db/: schema.sql
docs/: PROJECT_SCOPE.md  (+1 more)
(+31 files in other folders)
