[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exhale"
version = "2.0.0"
description = "Exhale — The Trusted Second Brain and Predictive Chief of Staff for Modern Households."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.6",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
secure = [
    "cryptography>=42.0",
]
pg = [
    "psycopg[binary]>=3.1",
]
connectors = [
    "httpx>=0.27",
]
llm = [
    "anthropic>=0.100",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "cryptography>=42.0",
    "psycopg[binary]>=3.1",
    "anthropic>=0.100",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exhale = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
